@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.3 2001/06/27 14:16:55 taca Exp $
+$NetBSD: distinfo,v 1.4 2003/08/01 21:04:20 jdolecek Exp $
 
-SHA1 (File-MMagic-1.13.tar.gz) = 74f869fd59041cdd63604cf2f8c74c0a7163154f
-Size (File-MMagic-1.13.tar.gz) = 20347 bytes
+SHA1 (File-MMagic-1.20.tar.gz) = d6392112202d0c529b42c6b9da7c98b2a0b84902
+Size (File-MMagic-1.20.tar.gz) = 20298 bytes
